# Aura

./: CMakeLists.txt  README.md
.VSCodeCounter/2023-05-05_21-30-59/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/: Aura.cpp  Aura.h  CMakeLists.txt  global.h  main.cpp
src/interface/: rhi.h  vulkan_rhi.cpp
src/interface/vulkan/: vulkan_rhi.cpp  vulkan_rhi.h
src/render/: render_type.h
src/render/interface/: rhi.h  rhi_struct.h
src/render/interface/vulkan_rhi/: vulkan_instance.cpp  vulkan_instance.h  vulkan_rhi.cpp  vulkan_rhi.h  vulkan_rhi_resource.h  vulkan_util.cpp  vulkan_util.h
